--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,11 +7,13 @@ set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-#Mouse works as expected
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# Mouse works as expected
+#setw -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
+# Apparently this has changed, and is now this option
+set -g mouse on
 
 setw -g monitor-activity on
 set -g visual-activity on
