--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,38 +2,28 @@
 set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
-
+ 
 set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
-
+ 
 # Mouse works as expected
-#setw -g mode-mouse on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
-# Apparently this has changed, and is now this option
 set -g mouse on
-
+ 
 setw -g monitor-activity on
 set -g visual-activity on
-
+ 
 set -g mode-keys vi
 set -g history-limit 10000
-
+ 
 # y and p as in vim
 bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-bind -t vi-copy 'Space' halfpage-down
-bind -t vi-copy 'Bspace' halfpage-up
 
-# extra commands for interacting with the ICCCM clipboard
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
+# mouse select copy for Mac
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi r send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+ 
 # easy-to-remember split pane commands
 bind | split-window -h
 bind - split-window -v
@@ -52,3 +42,5 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+ 
+bind u set-window-option synchronize-panes
